--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
 </head>
 <body>
 	<header>
-		<div id: nav><h1>Eric Zuckerman</h1></div>
-		<div id: nav><h5>About</h5></div>
-		<div id: nav><h5>Portfolio</h5></div>
-		<div id: nav><h5>Contact</h5></div>
-	</header>
-		<div id: about>
-			
+		<div id: name>
+			<h1>Eric Zuckerman</h1>
 		</div>
-		<aside id: connect>
-		</aside>		
+		<nav>
+			<div id: about>
+				<a href="index.html"><h5>About</h5></a>
+			</div>
+			<div id: contact>
+				<a href="contact.html"><h5>Contact</h5></a>
+			</div>
+			<div id: portfolio>
+				<a href="portfolio.html"><h5>Portfolio</h5></a>
+			</div>
+		</nav>
+	</header>
+	<section id: about>
+		<h2>About Me</h2>
+			<img src=".">
+			<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
+
+			<p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+	</section>
+	<aside id: connect>
+		<h3>Connect with Me</h3>
+			<div></div>
+			<div></div>
+			<div></div>
+	</aside>
+	<footer>
+		<h6>&copy; Copyright 2016 Eric Zuckerman</h6>
+	</footer>	
 </body>
 </html>
