Added additional html elelements, including all pictures and logos. Still has temp text in bio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,31 +22,37 @@
 	<section>
 		<h2>Portfolio</h2>
 			<div>
-				<img src=".">
+				<img src="assets/images/ipadimage.jpg">
 				<h5>Hangman</h5>
 			</div>
 			<div>
-				<img src=".">
+				<img src="assets/images/turntableimage.jpg">
 				<h5>RPG Game</h5>
 			</div>
 			<div>
-				<img src=".">
+				<img src="assets/images/earbudsimage.jpg">
 				<h5>Trivia Game</h5>
 			</div>
 			<div>
-				<img src=".">
+				<img src="assets/images/cellphoneimage.jpg">
 				<h5>Rutgers Info Widget</h5>
 			</div>
 			<div>
-				<img src=".">
+				<img src="assets/images/tvimage.jpg">
 				<h5>Rock Paper Scissors</h5>
 			</div>
 	</section>
 	<aside id: connect>
 		<h3>Connect with Me</h3>
-			<div></div>
-			<div></div>
-			<div></div>
+			<div>
+				<img src="assets/images/githublogo.png">
+			</div>
+			<div>
+				<img src="assets/images/linkedinlogo.png">
+			</div>
+			<div>
+				<img src="assets/images/stackoverflowlogo.png">
+			</div>
 	</aside>
 	<footer>
 		<h6>&copy; Copyright 2016 Eric Zuckerman</h6>
