fixed html id issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <head>
 	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header>
-		<div id: name>
+		<div id="name">
 			<h1>Eric Zuckerman</h1>
 		</div>
 		<nav>
-			<div id: about>
+			<div id="about">
 				<a href="index.html"><h5>About</h5></a>
 			</div>
-			<div id: contact>
+			<div id="contact">
 				<a href="contact.html"><h5>Contact</h5></a>
 			</div>
-			<div id: portfolio>
+			<div id="portfolio">
 				<a href="portfolio.html"><h5>Portfolio</h5></a>
 			</div>
 		</nav>
@@ -42,7 +44,7 @@
 				<h5>Rock Paper Scissors</h5>
 			</div>
 	</section>
-	<aside id: connect>
+	<aside id="connect">
 		<h3>Connect with Me</h3>
 			<div>
 				<img src="assets/images/githublogo.png">
