--- a/contact.html
+++ b/contact.html
@@ -2,25 +2,27 @@
 <html>
 <head>
 	<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header>
-		<div id: name>
+		<div id="name">
 			<h1>Eric Zuckerman</h1>
 		</div>
 		<nav>
-			<div id: about>
+			<div id="about">
 				<a href="index.html"><h5>About</h5></a>
 			</div>
-			<div id: contact>
+			<div id="contact">
 				<a href="contact.html"><h5>Contact</h5></a>
 			</div>
-			<div id: portfolio>
+			<div id="portfolio">
 				<a href="portfolio.html"><h5>Portfolio</h5></a>
 			</div>
 		</nav>
 	</header>
-	<section id: contact>
+	<section id="contact">
 		<h2>Contact</h2>
 		<form action="." method="post">
 				<label>Name</label><br>
@@ -31,11 +33,17 @@
 				<textarea name="message" rows="10"></textarea>
 		</form>
 			
-	<aside id: connect>
+	<aside id="connect">
 		<h3>Connect with Me</h3>
-			<div></div>
-			<div></div>
-			<div></div>
+			<div>
+				<img src="assets/images/githublogo.png">
+			</div>
+			<div>
+				<img src="assets/images/linkedinlogo.png">
+			</div>
+			<div>
+				<img src="assets/images/stackoverflowlogo.png">
+			</div>
 	</aside>
 	<footer>
 		<h6>&copy; Copyright 2016 Eric Zuckerman</h6>
