--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,13 @@
 		<div id="name">
 			<h1>Eric Zuckerman</h1>
 		</div>
-		<nav>
-			<div id="about">
-				<a href="index.html"><h5>About</h5></a>
-			</div>
-			<div id="contact">
-				<a href="contact.html"><h5>Contact</h5></a>
-			</div>
-			<div id="portfolio">
-				<a href="portfolio.html"><h5>Portfolio</h5></a>
-			</div>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="index.html"><h5>About</h5></a></li>
+					<li><a href="contact.html"><h5>Contact</h5></a></li>
+					<li><a href="portfolio.html"><h5>Portfolio</h5></a></li>
+				</ul>
+			</nav>
 	</header>
 	<section id="contact">
 		<h2>Contact</h2>
@@ -32,21 +28,21 @@
 				<label>Message</label><br>
 				<textarea name="message" rows="10"></textarea>
 		</form>
-			
+	</section>		
 	<aside id="connect">
 		<h3>Connect with Me</h3>
-			<div>
-				<img src="assets/images/githublogo.png">
-			</div>
-			<div>
-				<img src="assets/images/linkedinlogo.png">
-			</div>
-			<div>
-				<img src="assets/images/stackoverflowlogo.png">
-			</div>
+		<div>
+			<a href="https://github.com/ezdel" target="_blank"><img class="logo" src="assets/images/githublogo.png"></a>
+		</div>
+		<div>
+			<a href="https://www.linkedin.com/in/eric-zuckerman-aa6065109" target="_blank"><img class="logo" src="assets/images/linkedinlogo.png"></a>
+		</div>
+		<div>
+			<a href="http://stackoverflow.com/users/6524708/eric-zuckerman" target="_blank"><img class="logo" src="assets/images/stackoverflowlogo.png"></a>
+		</div>
 	</aside>
 	<footer>
 		<h6>&copy; Copyright 2016 Eric Zuckerman</h6>
-	</footer>	
+	</footer>		
 </body>
 </html>
