--- a/portfolio.html
+++ b/portfolio.html
@@ -9,55 +9,51 @@
 		<div id="name">
 			<h1>Eric Zuckerman</h1>
 		</div>
-		<nav>
-			<div id="about">
-				<a href="index.html"><h5>About</h5></a>
-			</div>
-			<div id="contact">
-				<a href="contact.html"><h5>Contact</h5></a>
-			</div>
-			<div id="portfolio">
-				<a href="portfolio.html"><h5>Portfolio</h5></a>
-			</div>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="index.html"><h5>About</h5></a></li>
+					<li><a href="contact.html"><h5>Contact</h5></a></li>
+					<li><a href="portfolio.html"><h5>Portfolio</h5></a></li>
+				</ul>
+			</nav>
 	</header>
-	<section>
+	<section id="portfolio">
 		<h2>Portfolio</h2>
-			<div>
-				<img src="assets/images/ipadimage.jpg">
-				<h5>Hangman</h5>
+			<div class="container">
+				<img class="stock" src="assets/images/ipadimage.jpg">
+				<h4>Hangman</h4>
 			</div>
-			<div>
-				<img src="assets/images/turntableimage.jpg">
-				<h5>RPG Game</h5>
+			<div class="container">
+				<img class="stock" src="assets/images/turntableimage.jpg">
+				<h4>RPG Game</h4>
 			</div>
-			<div>
-				<img src="assets/images/earbudsimage.jpg">
-				<h5>Trivia Game</h5>
+			<div class="container">
+				<img class="stock" src="assets/images/earbudsimage.jpg">
+				<h4>Trivia Game</h4>
 			</div>
-			<div>
-				<img src="assets/images/cellphoneimage.jpg">
-				<h5>Rutgers Info Widget</h5>
+			<div class="container">
+				<img class="stock" src="assets/images/cellphoneimage.jpg">
+				<h4>Rutgers Info Widget</h4>
 			</div>
-			<div>
-				<img src="assets/images/tvimage.jpg">
-				<h5>Rock Paper Scissors</h5>
+			<div class="container">
+				<img class="stock" src="assets/images/tvimage.jpg">
+				<h4>Rock Paper Scissors</h4>
 			</div>
 	</section>
 	<aside id="connect">
 		<h3>Connect with Me</h3>
-			<div>
-				<img src="assets/images/githublogo.png">
-			</div>
-			<div>
-				<img src="assets/images/linkedinlogo.png">
-			</div>
-			<div>
-				<img src="assets/images/stackoverflowlogo.png">
-			</div>
+		<div>
+			<a href="https://github.com/ezdel" target="_blank"><img class="logo" src="assets/images/githublogo.png"></a>
+		</div>
+		<div>
+			<a href="https://www.linkedin.com/in/eric-zuckerman-aa6065109" target="_blank"><img class="logo" src="assets/images/linkedinlogo.png"></a>
+		</div>
+		<div>
+			<a href="http://stackoverflow.com/users/6524708/eric-zuckerman" target="_blank"><img class="logo" src="assets/images/stackoverflowlogo.png"></a>
+		</div>
 	</aside>
 	<footer>
 		<h6>&copy; Copyright 2016 Eric Zuckerman</h6>
-	</footer>	
+	</footer>		
 </body>
 </html>
