--- a/index.html
+++ b/index.html
@@ -12,28 +12,24 @@
 		</div>
 			<nav>
 				<ul>
-					<li><a href="index.html"><h5>About</h5></a></li>
-					<li><a href="contact.html"><h5>Contact</h5></a></li>
 					<li><a href="portfolio.html"><h5>Portfolio</h5></a></li>
+					<li><a href="contact.html"><h5>Contact</h5></a></li>
+					<li><a href="index.html"><h5>About</h5></a></li>
 				</ul>
 			</nav>
 	</header>
 	<section id="bio">
 		<h2>About Me</h2>
-			<img id="ez" src="../../../../EZprofilecropped.jpg">
-			<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
+			<img id="ez" src="assets/images/EZprofilecropped.jpg">
+			<p>Los Angeles is full of people who make their living in all sorts of professions, but are wannabe actors. Eric Zuckerman is a professional actor who is a wannabe coder.</p><br>
 
-			<p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+			<p>You may have seen him on <span>The Office</span>, or in <span>War of the Worlds</span>. Or maybe you saw him as the rabbi in season three of <span>Orange is the New Black</span>. He's particularly proud of that performance, but hopefully the next time he works for Netflix, it will be implementing code to make their database better at predicting what he wants to watch.</p>
 	</section>
 	<aside id="connect">
 		<h3>Connect with Me</h3>
-		<div>
+		<div id="logos">
 			<a href="https://github.com/ezdel" target="_blank"><img class="logo" src="assets/images/githublogo.png"></a>
-		</div>
-		<div>
 			<a href="https://www.linkedin.com/in/eric-zuckerman-aa6065109" target="_blank"><img class="logo" src="assets/images/linkedinlogo.png"></a>
-		</div>
-		<div>
 			<a href="http://stackoverflow.com/users/6524708/eric-zuckerman" target="_blank"><img class="logo" src="assets/images/stackoverflowlogo.png"></a>
 		</div>
 	</aside>
