fixed errors in contact page caused in gh-pages push

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
 				<input type="text" name="email" placeholder="example@gmail.com"><br>
 				<label>Message</label><br>
 				<textarea name="message" rows="10"></textarea>
+				<button>Submit</button>
 		</form>
 	</section>		
 	<aside id="connect">
